[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ever_executor'
version = '1.17.11'

[dependencies]
failure = '0.1.6'
lazy_static = '1.4'
log = '0.4'
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.10.4' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.1.9' }

[features]
signature_with_id = [ 'ever_block/signature_with_id', 'ever_vm/signature_with_id' ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false

[profile]

