[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ever_executor'
version = '1.18.24'

[dependencies]
anyhow = '1.0'
lazy_static = '1.4'
log = '0.4'
thiserror = '1.0'
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.20' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.2.22' }

[features]
gosh = [ 'ever_vm/gosh', 'ever_block/gosh' ]
signature_with_id = [ 'ever_block/signature_with_id', 'ever_vm/signature_with_id' ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false

[profile]

